# AIKernel.Cuda13.0

./: .gitignore  AIKernel.Cuda13.0.Libtorch2.12.win-x64.slnx  README-ja.md  README.md  RELEASE_NOTES-ja.md  RELEASE_NOTES.md
.github/workflows/: publish-python.yml  release.yml
LICENSE-THIRD-PARTY/: pytorch-LICENSE.txt  pytorch-NOTICE.txt
docs/: package-distribution-ja.md  package-distribution.md  python-package-distribution-ja.md  python-package-distribution.md
native/: CMakeLists.txt  libtorch_bridge.cpp  libtorch_bridge.h
packaging/meta/: AIKernel.Cuda13.0.Libtorch2.12.win-x64.nuspec.template
python/: README-ja.md  README.md  pyproject.toml  setup.py
python/src/aikernel_cuda13_libtorch2_12_win_x64/: __init__.py  loader.json  loader.py
python/src/aikernel_cuda13_libtorch2_12_win_x64/managed/: README-ja.md  README.md
python/src/aikernel_cuda13_libtorch2_12_win_x64/native/win-x64/: README-ja.md  README.md
python/tests/: test_package_metadata.py
runtime/win-x64/libtorch/: PLACE_LIBTORCH_HERE.txt
src/AIKernel.Cuda13.0.Libtorch2.12.win-x64/: AIKernel.Cuda13.0.Libtorch2.12.win-x64.csproj
src/AIKernel.Cuda13.0.Libtorch2.12.win-x64/Capability/: LibTorchCapabilityDescriptor.cs  LibTorchCapabilityInvoker.cs  docs.en.xml  docs.ja.xml
src/AIKernel.Cuda13.0.Libtorch2.12.win-x64/Interop/: NativeLibraryLoader.cs  NativeMethods.cs  NativeTypes.cs  SafeHandles.cs  docs.en.xml  docs.ja.xml
src/AIKernel.Cuda13.0.Libtorch2.12.win-x64/Model/: LlamaForwardRequest.cs  LlamaForwardResult.cs  LlamaModelConfig.cs  docs.en.xml  docs.ja.xml
tests/AIKernel.Cuda13.0.Libtorch2.12.win-x64.Tests/: AIKernel.Cuda13.0.Libtorch2.12.win-x64.Tests.csproj  LibTorchCapabilityModuleTests.cs
